# upstate

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  THIRD_PARTY_LICENSES  docker-compose.yml
.github/workflows/: ci.yml  release.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/src/upstate/: __main__.py  demo.py  docker.py  homeassistant.py  interface.py  loader.py  server.py
backend/src/upstate/truenas/: apps.py  base.py  system.py
backend/tests/: __init__.py  test_homeassistant.py  test_loader.py  test_server.py  test_truenas_apps.py
frontend/: Dockerfile  index.html  nginx.conf.template  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: UpdateCard.css  UpdateCard.tsx
